# reifire

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  PROJECT_PLAN.md  README.md  RECOMMENDATIONS.md  ROADMAP.md  mkdocs.yml  probe_nounproject.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: api.md  data-structure.md  index.md  visualization.md
examples/: basic_illustration.html  basic_illustration.json  code_generation.html  code_generation.json  complex_visual_scene.html  complex_visual_scene.json  content_generation.html  content_generation.json  data_analysis.html  data_analysis.json  interactive_demo.py  provider_demo.py  question_answer.html  question_answer.json  test_visualization.html  test_visualization.py  tk_test.py  ui_component.html  ui_component.json  visualization.html  visualize_examples.py
examples/visualizations/: basic_illustration.html  code_generation.html  complex_visual_scene.html  content_generation.html  data_analysis.html  ui_component.html
scripts/: curate_icons.py  setup_dev.sh
src/reifire/: __init__.py  articulation.py  icon_registry.py  reification.py
src/reifire/visualization/: __init__.py  color_swatch.py  factory.py  htmlrenderer.py  icon_manager.py  interactive.py  layout.py  material_icons.py  metadata.py  nounproject.py  processor.py  registry.py  suggestions.py  viewer.py
src/reifire/visualization/output/: basic_illustration.html
src/reifire/visualization/providers/: __init__.py  base.py  bundled.py  chain.py  llm_svg.py  material.py  nounproject.py
src/reifire/visualization/providers/icons/: manifest.json
src/reifire/visualization/templates/: component.html  visualization.html
tests/: __init__.py  conftest.py
tests/reifire/: __init__.py  test_articulation.py  test_reification.py  test_reification_basic.py
tests/reifire/visualization/: __init__.py  conftest.py  test_htmlrenderer.py  test_interactive.py  test_layout.py  test_material_icons_integration.py  test_metadata.py  test_nounproject.py  test_nounproject_integration.py  test_processor.py  test_registry.py  test_suggestions.py
